fix some layout issues

--- a/src/components/DisplayBody/movieCard.css
+++ b/src/components/DisplayBody/movieCard.css
@@ -1,20 +1,32 @@
 .movie-card {
-  min-height: 300px;
-  min-width: 150px;
+  /* min-height: 300px; */
+  /* min-width: 150px; */
+  width: 282px;
+  height: 348px;
   /* 4 per row */
   flex-basis: calc(25% - 15px);
-  border: 2px solid lightgray;
-  border-radius: 5px;
+  border: 1px solid #E1E3E6;
+  border-radius: 7px;
   margin: 10px 0px;
   overflow: hidden;
   position: relative;
   text-align: center;
   background-color: white;
-  filter: drop-shadow(3px 3px 3px gray);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr minmax(0px, min-content);
+
+  
+  /* filter: drop-shadow(3px 3px 3px gray); */
+  box-shadow: 1px 2px 8px 2px rgba(0, 0, 0, 0.1);
+}
+
+.movie-card h4, .movie-card h5 {
+    font-weight: 400;
 }
 
 .movie-card-img {
-  height: 90%;
+  /* height: 90%; */
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -22,20 +34,31 @@
 }
 
 .movie-card-footer {
-  height: 10%;
+  /* height: 10%; */
+  font-size: 16px;
+  line-height: 19px;
   padding: 10px 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
 }
 
 .score-icon {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 14px;
+  left: 14px;
   background-color: white;
-  border-radius: 50%;
-  height: fit-content;
-  width: fit-content;
+  font-size: 12px;
+  line-height: 20px;
+  border-radius: 100px;
+  height: 32px;
+  width: 32px;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
   padding: 5px;
-  border: 3px solid black;
+  border: 1px solid black;
 }
 
 @media screen and (max-width: 1200px) {
